should not be longer than the lines of dashes.

Miguel Bolanos.

Contributor			Email
---------------------------------------------------------------------------

Claudio Matsuoka		claudio@conectiva.com
Eduardo Habkost			ehabkost@conectiva.com.br
Miguel Bolanos			mike@linuxlabs.com
Tommy McCabe			rocketjet314@yahoo.com

---------------------------------------------------------------------------

Fri Sep 17 18:48:26 BRT 2004	Claudio Matsuoka <claudio@conectiva.com>

	* Added a port of Nathan Laredo's tinyirc IRC client.

Wed Jul 28 12:09:11 CST 2004	Tommy McCabe <rocketjet314@yahoo.com>

	* Added l to PRGS on file_utils

Tue Jul 27 22:22:32 CST 2004	Miguel Bolanos <mike@linuxlabs.com>

	* Merged Claudio's patch to:
		- build full3, full5, comb, comb_net and boot.

Tue Jul 27 07:48:56 CST 2004	Miguel Bolanos <mike@linuxlabs.com>

	* Removed sudo commands from the Makefile, fixed the broken "clean"
	  (all merged from Tommy's patch)

Wed Jun 09 08:54:11 CST 2004	Claudio Matsuoka <claudio@conectiva.com>

	* Trivial patch to build stuff in elkscmd/inet.

Wed Jun 09 08:21:32 CST 2004	Miguel Bolanos <mike@linuxlabs.com>

	* Included swapon back into cvs :)

Wed Jun 09 03:47:56 CST 2004	Tommy McCabe <rocketjet314@yahoo.com>

	* Included ktcp in full5

Wed Jun 09 03:45:34 CST 2004	Miguel Bolanos <mike@linuxlabs.com>
	
	* Added e3

Sat Jun  5 17:44:06 BRT 2004	Eduardo Habkost <ehabkost@conectiva.com.br>

	* rootfs_template/etc/passwd doesn't depend on rootfs_template.tar
	  anymore
	* Added warning about broken make clean
	* People didn't respected the above line of dashes. Making it
	  bigger  ;)

Fri Jun 04 05:26:48 CST 2004	Claudio Matsuoka <claudio@conectiva.com>

	* Fixes to rebuild disk images, improvements by Miguel.

Fri Jun 04 05:25:34 CST 2004	Tommy McCabe <rocketjet314@yahoo.com>

	* Improved Makefile to mount filesystems using sudo.

Thu Jun 03 21:20:47 CST 2004	Miguel Bolanos <mike@linuxlabs.com>

	* Added lib/ directory to rootfs_template